All pages but home: fixed mobile screen to show only there, and keep showing home page on mobile.

--- a/app/scss/_global/_responsive.scss
+++ b/app/scss/_global/_responsive.scss
@@ -20,7 +20,7 @@
 		}
 	}
 	@media screen and (max-width: 1199px){
-		#mbrtWrapper{
+		#mbrtWrapper.responsiveless{
 			display: none;
 		}
 	}
